main.css
body {
    position: absolute;
    height: 100%;
    width: 100%;
    overflow-x: hidden;
    overflow-y: auto;
    margin: 0;
    display: block;
    top: 0;
    left: 0;
    background-color: ghostwhite;
}
#content {
    display: relative;
    width: 85%;
    height: 95%;
    background-color: ghostwhite;
}
#wrapper {
    width: 800px;
    margin: 0 auto;
    text-align: center;
}

#title {
    text-align: center;
    font-family: 'Vesper Libre', serif;
}

hr {
    width: 50%;
}
/* --- Projects --- */
.project {
    width: 100%;
    height: 300px;
    min-height: 300px;
}
.proj-grid {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: 50px 250px;
    align-items: center;
    justify-content: center;
    grid-column-gap: 5px;
}

.proj-title {
    grid-column: 1 / 3;
    grid-row: 1;
    width: 100%;
    font-size: 28px;
    font-family: 'Vesper Libre', serif;
}
.proj-title > p {
    margin: 0;
    padding-top: 3px;
    font-style: italic;
    font-size: 12px;
}

.proj-left {
    grid-column: 1;
    grid-row: 2;
}
.proj-right {
    grid-column: 2;
    grid-row: 2;
}
.proj-desc {
    justify-self: center;
    font-family: 'Arvo', serif;
    font-size: 16px;
}
.proj-desc > p {
    text-align: justify;
}
.proj-desc > ul {
    padding: 0;
    list-style-type: none;
    font-style: italic;
    font-size: 14px;
}
.proj-img > img {
    cursor: pointer;
    margin-top: 3px;

}
/* --- Sidebar --- */
#sidebar {
    position: fixed;
    float: right;
    right: 0;
    top: 0;

    display: inline-flex;
    align-items: center;

    width: 15%;
    height: 100%;
    
    text-align: center;

    background: 
    linear-gradient(80deg, #5680E9, #C1C8E460 50%, #8860D080 80%),
    linear-gradient(180deg, rgba(135, 96, 208, 0.8), #C1C8E460 30%),
    linear-gradient(360deg, rgba(255, 0, 0, 0.733), #84CEEB 50%);
    
    font-family: 'Titillium Web', sans-serif;
    overflow-x: hidden;
    overflow-y: auto;
}
#sidebar h1 {
    font-size: 2em;
    
}
#sidebar p {
    font-size: 0.75em;
}
#info {
    width: 100%;
}

@media only screen and (max-width:768px){
    body {
        overflow: scroll;
        display: flex;
        flex-direction: column-reverse;
    }
    #content {
        position: relative;
        overflow: scroll;
        width: 100%;
        height: auto;
        background-color: ghostwhite;
    }
    #sidebar {
        position: relative;
        width: 100%;
        height: 100%;
        min-height: 200px;
        float: none;
        display: inline-flex;
        overflow-y: hidden;
    }
    #wrapper {
        width: 100%;
    }
}

